--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@ body{
     margin-bottom: 50px;
     border-radius: 50%;
 }
+.menu{
+    list-style: none;
+    font-family: sans-serif;
+    position: absolute; 
+    top: 10px;
+    right: 30px;
+    cursor: pointer;
+    z-index: 10;
+}
 #welcome{
     position: absolute;
     overflow: hidden;
@@ -21,6 +30,7 @@ body{
     display: table;
     width: 100%;
     height: 100%;
+    z-index: 9;
 }
 h1 {
     font-size: 40px;
@@ -56,4 +66,21 @@ p {
     position: relative;
     text-align: center;
     vertical-align: middle
+}
+.links{
+    float: left;
+    color: #fff;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 9px;
+    padding-right: 9px;
+    font-family: fantasy;
+    font-size: 20px;
+}
+.links:hover{
+    background-color: darkslateblue;
+}
+#name{
+    font-size: 30px;
+    font-family: 'Cinzel', serif;
 }
