--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
     padding-top: 950px;
+    text-align: center;
+    padding-bottom: 100px;
 }
 .timbernerslee{
     width: 175px;
@@ -10,11 +12,13 @@ body{
 .menu{
     list-style: none;
     font-family: sans-serif;
-    position: absolute; 
-    top: 10px;
+    position: fixed; 
+    top: 0px;
     right: 30px;
     cursor: pointer;
     z-index: 10;
+    background-color: darksalmon;
+    color: aqua
 }
 #welcome{
     position: absolute;
@@ -83,4 +87,16 @@ p {
 #name{
     font-size: 30px;
     font-family: 'Cinzel', serif;
+}
+a{
+    text-decoration: none;
+}
+.articles:hover{
+    color: darkturquoise;
+}
+.menu:visited{
+    color: aqua;
+}
+html{
+    scroll-behavior: smooth;
 }
