--- a/style.css
+++ b/style.css
@@ -10,15 +10,18 @@ body{
     border-radius: 50%;
 }
 .menu{
+    background: white;
+    width: 100%;
+    height: 50px;
+    margin-top: 0px;
     list-style: none;
     font-family: sans-serif;
     position: fixed; 
     top: 0px;
-    right: 30px;
     cursor: pointer;
     z-index: 10;
-    background-color: darksalmon;
-    color: aqua
+    color: crimson;
+    text-align: center;
 }
 #welcome{
     position: absolute;
@@ -72,17 +75,19 @@ p {
     vertical-align: middle
 }
 .links{
-    float: left;
     color: #fff;
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 9px;
-    padding-right: 9px;
+    padding-left: 33px;
+    padding-right: 25px;
     font-family: fantasy;
     font-size: 20px;
+    display: inline;
 }
 .links:hover{
-    background-color: darkslateblue;
+    font-size: 25px;
+    text-decoration: underline;
+    
 }
 #name{
     font-size: 30px;
@@ -90,6 +95,8 @@ p {
 }
 a{
     text-decoration: none;
+    color: crimson;
+    text-shadow: 5px 5px black;
 }
 .articles:hover{
     color: darkturquoise;
@@ -99,4 +106,22 @@ a{
 }
 html{
     scroll-behavior: smooth;
+}
+#mywritings a{
+    text-shadow: none !important;
+    text-decoration: underline !important;
+    color: blue !important;
+}
+#contacts{
+    background: firebrick;
+}
+.contact_1 a{
+    color: azure;
+    text-shadow: none;
+}
+.contact_1 h3{
+    display: inline;
+}
+#contacts iframe{
+    width: 100%;
 }
