--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body{
-    margin: 0;
-    padding-top: 950px;
     text-align: center;
-    padding-bottom: 100px;
+    top: 800px;
 }
 .timbernerslee{
     width: 175px;
@@ -74,16 +72,6 @@ p {
     text-align: center;
     vertical-align: middle
 }
-.links{
-    color: #fff;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 33px;
-    padding-right: 25px;
-    font-family: fantasy;
-    font-size: 20px;
-    display: inline;
-}
 .links:hover{
     font-size: 25px;
     text-decoration: underline;
@@ -116,7 +104,7 @@ html{
     background: firebrick;
 }
 .contact_1 a{
-    color: azure;
+    color: dimgray;
     text-shadow: none;
 }
 .contact_1 h3{
@@ -124,4 +112,12 @@ html{
 }
 #contacts iframe{
     width: 100%;
+}
+.my_navbar{
+    position: sticky;
+    top: 0;
+    z-index: 9999999999;
+}
+input {
+    background-color: gray;
 }
